--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script>
         // *** PASSO CRÍTICO: VOCÊ PRECISA SUBSTITUIR O TEXTO ABAIXO PELA SUA CHAVE API VÁLIDA. ***
         // O Canvas injeta o token automaticamente, mas o GitHub Pages precisa da chave explícita.
-        const API_KEY = "SUA_CHAVE_API_GEMINI_AQUI"; 
+        const API_KEY = "SUA_CHAVE_REAL_AQUI"; 
         
         // Agora, construímos a URL com a chave para resolver o erro 403 no GitHub Pages.
         const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${API_KEY}`;
@@ -259,3 +259,4 @@
     </footer>
 </body>
 </html>
+
