--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <script>
         // ***************************************************************
         // *** PASSO CRÍTICO: SUBSTITUA O TEXTO ABAIXO PELA SUA CHAVE API VÁLIDA. ***
-        // *** VOCÊ DEVE GARANTIR QUE ESTA CHAVE ESTEJA ATIVA E SEJA EXATAMENTE A CHAVE ***
-        // *** FORNECIDA PELO GOOGLE AI STUDIO PARA O GEMINI API. ***
-        const API_KEY = "COLE_AQUI_SUA_CHAVE_REAL_GEMINI"; 
+        // *** O erro HTTP 400 indica que a chave inserida é inválida ou expirou. ***
+        // *** Você DEVE garantir que a chave aqui seja a SUA chave REAL e ATIVA. ***
+        // Linha 42 do chokmah_business.html
+        const API_KEY = "AIzaSyCBOK9QqQAt9XpBrOCh37NTZ2syU8dbHns"; // <<< CHAVE VÁLIDA INSERIDA AQUI >>>
         // ***************************************************************
         
         // Agora, construímos a URL com a chave para resolver o erro 403 no GitHub Pages.
@@ -264,4 +265,3 @@
     </footer>
 </body>
 </html>
-
