--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         // *** PASSO CRÍTICO: SUBSTITUA O TEXTO ABAIXO PELA SUA CHAVE API VÁLIDA. ***
         // *** O erro HTTP 400 indica que a chave inserida é inválida ou expirou. ***
         // *** Você DEVE garantir que a chave aqui seja a SUA chave REAL e ATIVA. ***
-        // Linha 42 do chokmah_business.html
+        // Linha 42 do index.html (antigo chokmah_business.html)
         const API_KEY = "AIzaSyCBOK9QqQAt9XpBrOCh37NTZ2syU8dbHns"; // <<< CHAVE VÁLIDA INSERIDA AQUI >>>
         // ***************************************************************
         
